# openshift-python-wrapper-data-collector

./: .flake8  .pre-commit-config.yaml  .release-it.json  README.md  data-collector.yaml.example  pyproject.toml  renovate.json  setup.cfg  setup.py  tox.ini
.github/workflows/: close-stale-issues.yml
ocp_wrapper_data_collector/: data_collector.py
