[metadata]
name = openshift-python-wrapper-data-collector
version = 1.0.0
author = Meni Yakove, Ruth Netser
author_email = rnetser@redhat.com, myakove@redhat.com
description = Data collector for https://github.com/openshift/openshift-python-wrapper when running with PyTest
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RedHatQE/openshift-python-wrapper-data-collector
download_url = https://github.com/RedHatQE/openshift-python-wrapper-data-collector/archive/refs/tags/1.0.0.tar.gz

project_urls =
    Bug Tracker = https://github.com/RedHatQE/openshift-python-wrapper-data-collector/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
